# chess-interp

./: .gitignore  README.md  pyproject.toml
gpt_chess/: mech_interp.ipynb  mech_interp2.ipynb
leela_interp/: leela_interp_demo.ipynb
leela_pytorch_impl/: README.md  convert_to_pytorch.py  forward_pass_implementation.py  iceberg_board.py  init.py  inpect_weights.py  leela_board.py  leela_model_uci_bot.py  model.py  net_pb2.py
scripts/: play_chess_gui.py  play_chess_uci.py
