[project]
name = "chess-interp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio-tools>=1.60",
    "protobuf>=5",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

# Normal PyPI
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "torch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true


[tool.uv.sources]
torch = { index = "torch-cu126" }
torchvision = { index = "torch-cu126" }
