[project]
name = "chess-interp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chess>=1.11.2",
    "datasets>=4.8.5",
    "einops>=0.8.2",
    "grpcio-tools>=1.60",
    "iceberg>=0.4",
    "matplotlib>=3.10.9",
    "nnsight>=0.7.0",
    "onnx>=1.21.0",
    "onnx2torch>=1.5.15",
    "pandas>=3.0.2",
    "protobuf>=5",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.7.0",
]

# Normal PyPI
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "torch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true


[tool.uv.sources]
torch = { index = "torch-cu126" }
torchvision = { index = "torch-cu126" }
